# RecipePlanner

./: CMakeLists.txt
assets/: README.md
src/: ai.h  gui.cpp  gui.h  main.cpp
